fix: Updated some styling issues.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <nav class="nav">
       <div class="nav-left">
-          <img src="logo.png" class="logo">
+          <img src="logo.png" class="logo" onclick="window.location.href='#home'">
             <div class="textRollout">
               Declutter your house this Autumn!
           </div>
@@ -22,6 +22,7 @@
       <div class="nav-right">
           <a href="#find">Find</a>
           <a href="#give">Give</a>
+          <a href="#contact">Contact </a>
           <a href="#about">About Us</a>
           <button class="login">Log in</button>
       </div>
@@ -53,7 +54,8 @@
               <input type="text" id="workAddress" name="workAddress" placeholder="Work Address" required><br>
               <input type="text" id="mobileNumber" name="mobileNumber" placeholder="Mobile Number" required><br>
               <input type="email" id="email" name="email" placeholder="Email" required><br>
-              <button type="submit">Register</button>
+              </i>
+              <button class="submit" type="submit">Register</button>
             </form>
         </div>
         
