fix: Updated css

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div id="form-ct" class="signUpForm">
           <span id="trigger-modal" class="close" onclick="closeForm()">&times;</span>
             <form action="#">
-              <h2 type="text">Join our community today!</h2>
+              <h2 type="text"><b>Join our community today!</b></h2>
               <p class="required"><i>Please fill in all fields</i></p>
 
               <div class="formGroup">
