Fix: Updated font sizing

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
  
   <div class="parallax">
     <div class="welcome">
-      <h1 class="welcomeTitle">Freecycling</h1>
+      <h1 class="welcomeTitle">Freecycling!</h1>
       <p class="welcomeBody">Welcome to The Freecycle Network™!</br></br>We are a grassroots & entirely nonprofit movement 
         of people who are giving and getting stuff for free 
         in their own Towns. It's all about reuse and keeping 
