--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <button id="signUpButton" class="signup" onclick="openForm()">Sign Up!</button>
         
         <div id="form-ct" class="signUpForm">
-          <div>
-            <span id="trigger-modal" class="close" onclick="closeForm()">&times;</span>
+          <div id="trigger-modal">
+            <span class="close" onclick="closeForm()">&times;</span>
           </div>
             <form action="#">
               <h2 type="text"><b>Join our community today!</b></h2>
